--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-image: linear-gradient(to right, rgba(50, 43, 43, 0.823), rgba(41, 35, 35, 0.533));
+}
