--- a/src/app/Components/tool-bar/tool-bar.component.html
+++ b/src/app/Components/tool-bar/tool-bar.component.html
@@ -1,5 +1,5 @@
 <div class="tool-bar">
-    <button (click)="addQ($event)" style="margin-top: 10%;">Add Q</button>
+    <button (click)="addQ($event)" style="margin-top: 13%;">Add Q</button>
     <button (click)="addM($event)"> Add M</button>
     <button style="display: flex; flex-direction: row;" (click)="addP($event)">
         <div class="text" >Add P</div>
@@ -8,9 +8,9 @@
     <button (click)="line($event)" id="line">Line</button>
     <button (click)="run($event)">Run</button>
     <button (click)="replay($event)">Replay</button>
+    <button (click)="stop($event)">Pause</button>
     <button (click)="clear($event)">Clear</button>
+
 </div>
-
 <div class="stage" id="board">
-
 </div>
